# Nedlia

./: .gitignore  .lintstagedrc.mjs  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-scope-check.yml  pr-title.yml  release-train.yml  sonarcloud.yml
.husky/: commit-msg  pre-commit
.nx/workspace-data/: eslint-2654242865465226088.hash  file-map.json  lockfile-nodes.hash  nx_files.nxt  parsed-lock-file.nodes.json  project-graph.json  source-maps.json
.sonarlint/: connectedMode.json
docs/: api-standards.md  branching-strategy.md  deployment.md  distributed-tracing.md  error-handling-strategy.md  error-handling.md  event-schema-versioning.md  frontend-architecture.md  getting-started.md  local-development.md  pull-request-guidelines.md  python-style-guide.md  release-management.md  testing-strategy.md  testing.md  versioning-strategy.md
docs/adr/: 001-clean-architecture.md  002-aws-serverless.md  003-event-driven.md  004-terraform-terragrunt.md  005-trunk-based-development.md  README.md
nedlia-IaC/: README.md  project.json
nedlia-IaC/docs/: NAMING_CONVENTIONS.md  ORGANIZATION.md
nedlia-IaC/environments/prod/static-website/: terragrunt.hcl
nedlia-IaC/environments/prod/static-website/.terragrunt-cache/7hrAkpi1yoh1jewMYc04EX0Zk1k/ZHONiTRN9BPO1ymRrOcQXhK_UL4/: .terragrunt-module-manifest  .terragrunt-source-manifest  .terragrunt-source-version  backend.tf  main.tf  provider.tf
nedlia-IaC/environments/prod/static-website/.terragrunt-cache/7hrAkpi1yoh1jewMYc04EX0Zk1k/ZHONiTRN9BPO1ymRrOcQXhK_UL4/.terraform/: terraform.tfstate
nedlia-IaC/environments/prod/static-website/.terragrunt-cache/7hrAkpi1yoh1jewMYc04EX0Zk1k/ZHONiTRN9BPO1ymRrOcQXhK_UL4/.terraform/providers/registry.opentofu.org/hashicorp/aws/5.100.0/: darwin_amd64
nedlia-IaC/modules/api-gateway/: main.tf
nedlia-IaC/modules/aurora/: main.tf
nedlia-IaC/modules/cognito/: main.tf
nedlia-IaC/modules/eventbridge/: main.tf
nedlia-IaC/modules/lambda/: main.tf
nedlia-IaC/modules/s3/: main.tf
nedlia-IaC/modules/sqs/: main.tf
nedlia-IaC/modules/static-website/: main.tf  outputs.tf  variables.tf
nedlia-IaC/modules/vpc/: main.tf
nedlia-back-end/: README.md  project.json
nedlia-back-end/api/: README.md  project.json  pyproject.toml
nedlia-back-end/api/src/: main.py
nedlia-back-end/services/placement-service/: README.md  project.json  pyproject.toml
nedlia-back-end/services/placement-service/src/: main.py
nedlia-back-end/services/placement-service/src/interface/routes/: health.py  placements.py
nedlia-back-end/shared/: project.json  pyproject.toml
nedlia-back-end/workers/: README.md  project.json  pyproject.toml
nedlia-front-end/demo/: nedlia-hero.html  widget-demo.html  ws-test.html
nedlia-front-end/hereo/: index.html
nedlia-front-end/portal/: README.md  eslint.config.js  package.json  project.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
nedlia-front-end/portal/src/: App.tsx  app.test.tsx  index.css  main.tsx
nedlia-plugin/: project.json
nedlia-sdk/javascript/: project.json
nedlia-sdk/js/: eslint.config.js  package.json  project.json
nedlia-sdk/js/src/: index.test.ts  index.ts
nedlia-sdk/python/: pyproject.toml
releases/: README.md
tests/performance/: README.md
tools/git-hooks-tests/: README.md  conftest.py  pyproject.toml  test_pre_commit_hook.py  test_pre_commit_integration.py
