[project]
name = "nedlia-workers"
version = "0.1.0"
description = "Nedlia background workers"
requires-python = ">=3.11"
dependencies = [
    # Shared domain
    # "nedlia-shared",
    # AWS
    # "boto3>=1.34.0",
    # Task queue (choose one)
    # "arq>=0.25.0",  # Redis-based
    # "dramatiq>=1.15.0",  # RabbitMQ/Redis
]

[project.optional-dependencies]
dev = [
    # "pytest>=8.0.0",
    # "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# Ruff - Python Linter & Formatter (PEP 8 compliant)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "D", "UP", "B", "SIM", "C4", "TCH", "RUF"]
ignore = ["D100", "D104", "D107", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# MyPy - Static Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
