[project]
name = "nedlia-git-hooks-tests"
version = "0.1.0"
description = "Test suite for Git hooks in Nedlia monorepo"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../python/ruff.toml"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]